tests/ui/parser/lifetime_starts_expressions.stderr
error: parentheses are required around this expression to avoid confusion with a labeled break expression
  --> $DIR/lifetime_starts_expressions.rs:8:18
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: wrap the expression in parentheses
   |
LL |     loop { break ('label: loop { break 'label 42; }); }
   |                  +                                 +

error: parentheses are required around this expression to avoid confusion with a labeled break expression
  --> $DIR/lifetime_starts_expressions.rs:33:15
   |
LL |           break 'inner_loop: loop {
   |  _______________^
LL | |
LL | |
LL | |             break 'inner_loop 1;
LL | |         };
   | |_________^
   |
help: wrap the expression in parentheses
   |
LL ~         break ('inner_loop: loop {
LL |
LL |
LL |             break 'inner_loop 1;
LL ~         });
   |

warning: this labeled break expression is easy to confuse with an unlabeled break with a labeled value expression
  --> $DIR/lifetime_starts_expressions.rs:15:9
   |
LL | /         break 'label
LL | |
LL | |             loop { break 42; };
   | |______________________________^
   |
   = note: `#[warn(break_with_label_and_loop)]` on by default
help: wrap this expression in parentheses
   |
LL |             (loop { break 42; });
   |             +                  +

error: aborting due to 2 previous errors; 1 warning emitted

